--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,6 +1,5 @@
 
   #Nav .navbar {
-    background-color: #424f95;
     transition: background .5s ease-in-out,padding .5s ease-in-out;
   }
 
